fix truncate class

--- a/app/assets/styleguide/css/surface.css
+++ b/app/assets/styleguide/css/surface.css
@@ -1863,7 +1863,7 @@ stand out a little more from those that surround it:
 }
 
 .m-nav > li > a {
-  color: white;
+  color: white !important;
   display: block;
   font-size: 14px;
   height: 30px;
